retrieveUnpackaged/objects/Candidate_Application__c.object
<CustomObject>
    <fields>
        <fullName>Ad_Hoc_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ad-Hoc 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Candidate Applications</relationshipLabel>
        <relationshipName>Candidate_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ad_Hoc_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ad-Hoc 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Candidate Applications (Ad-Hoc 2)</relationshipLabel>
        <relationshipName>Candidate_Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ad_Hoc_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ad-Hoc 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Candidate Applications (Ad-Hoc 3)</relationshipLabel>
        <relationshipName>Candidate_Applications2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_GS_Level__c</fullName>
        <label>Current GS Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Region__c</fullName>
        <label>Current Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Line_supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Line supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Candidate_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intended_Track__c</fullName>
        <label>Intended Track</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Track 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOI_Reject_Reason__c</fullName>
        <label>LOI Reject Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOI_Status__c</fullName>
        <label>LOI Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Status 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Package_Reject_Reason__c</fullName>
        <label>Package Reject Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reason 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Package_Status__c</fullName>
        <label>Package Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Status 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Panel_Member_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Panel Member 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Candidate_Applications4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Panel_Member_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Panel Member 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Candidate_Applications5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Panel_Member_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Panel Member 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Candidate_Applications6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Candidate Applications (Requestor)</relationshipLabel>
        <relationshipName>Candidate_Applications5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Second_Line_Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second Line Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Candidate_Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TQB_Chair__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TQB Chair</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Candidate_Applications3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TQB_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TQB Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Candidate_Applications2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Candidate Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TQBR-{00000000}</displayFormat>
        <label>Candidate Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>